<resources>
    <string name="app_name">Smart GreenHouse</string>
    <!-- Strings used for fragments for navigation -->

    <string name="wi_fi_bluetooth">Отправить данные о Wi-Fi сети через Bluetooth</string>
    <string name="temperatureReferenceLabel">Эталон температуры: </string>
    <string name="humidityReferenceLabel">Эталон влажности: </string>
    <string name="LightReferenceLabel">Эталон освещенности: </string>
    <string name="currentTemperatureLabel">Температура: </string>
    <string name="currentHumidityLabel">Влажность: </string>
    <string name="currentLightLabel">Освещенность: </string>
    <string name="changeDeviceId">Изменить ID теплицы</string>
    <string name="setReferenceButton">Просмотр и отправка показателей</string>
    <string name="showDeviceId">ID теплицы:</string>
    <string name="wiFiPassword">Wi-Fi пароль</string>
    <string name="wiFiSsid">Wi-Fi SSID</string>
    <string name="sendWiFiData">Отправить данные Wi-Fi сети</string>
    <string name="sendReferencesValues">Отправить эталонные значения</string>
    <string name="showChosenDevice">Выбранное устройство: </string>
    <string name="sendReferencesByBluetooth">Отправить эталонные значения по Bluetooth</string>
    <string name="setReferencesByBluetoothTittle">Отправка эталонных значений по Bluetooth</string>
    <string name="NoData">Нет данных</string>
    <string name="sendWiFiDataHeader">Отправка данных Wi-Fi сети</string>
    <string name="setReferencesOnServerTitle">Чтение и отправка показателей на сервер</string>
    <string name="EnterDeviceId">Ввод ID теплицы</string>
    <string name="defaultLightReference">40%</string>
    <string name="defaultHumidityReference">40%</string>
    <string name="defaultTemperatureReference">25°C</string>
    <string name="chooseDevice">Выбрать устройство</string>
    <string name="refresh">Обновить</string>
    <string name="defaultActuatorState">⚪️</string>
    <string name="lightIcon">☀️</string>
    <string name="temperatureIcon">🌡</string>
    <string name="moistureIcon">💧</string>
    <string name="unknownValue">?</string>
    <string name="heatIcon">🔥</string>
    <string name="coolingIcon">️❄️</string>
    <string name="lightActuatorIcon">💡</string>
</resources>