<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetReferenceActivity">

    <TextView
        android:id="@+id/apiKeyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="4dp"
        android:padding="16dp"
        android:text="@string/showApiKey"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/changeApiKeyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changeApiKey"
        app:layout_constraintTop_toBottomOf="@id/apiKeyTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp" />

    <TextView
        android:id="@+id/currentLightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentLightLabel"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/changeApiKeyButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp" />

    <TextView
        android:id="@+id/currentHumidityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentHumidityLabel"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/currentLightTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp" />

    <TextView
        android:id="@+id/currentTemperatureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentTemperatureLabel"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/currentHumidityTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp" />

    <TextView
        android:id="@+id/lightLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LightReferenceLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currentTemperatureTextView"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <com.google.android.material.slider.Slider
        android:id="@+id/lightSlider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:stepSize="1"
        android:value="50"
        android:valueFrom="0"
        android:valueTo="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lightLabel"
        app:labelBehavior="gone" />

    <TextView
        android:id="@+id/humidityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidityReferenceLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lightSlider"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <com.google.android.material.slider.Slider
        android:id="@+id/humiditySlider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:stepSize="1"
        android:value="50"
        android:valueFrom="0"
        android:valueTo="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/humidityLabel"
        app:labelBehavior="gone" />

    <TextView
        android:id="@+id/temperatureLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperatureReferenceLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/humiditySlider"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <com.google.android.material.slider.Slider
        android:id="@+id/temperatureSlider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:stepSize="1"
        android:value="50"
        android:valueFrom="0"
        android:valueTo="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/temperatureLabel"
        app:labelBehavior="gone" />

    <Button
        android:id="@+id/setReferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendReferencesValues"
        app:layout_constraintTop_toBottomOf="@id/temperatureSlider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp" />


</androidx.constraintlayout.widget.ConstraintLayout>