<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetReferencesByBluetoothActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/setReferencesByBluetoothTittle"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/deviceChosenTextLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:paddingVertical="16dp"
        android:text="@string/showChosenDevice"
        android:textSize="16sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/deviceChosenValue"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/deviceChosenValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="16dp"
        android:text=""
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@id/deviceChosenTextLabel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <Button
        android:id="@+id/btnScanDevices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:text="@string/scanBluetoothDevices"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deviceChosenTextLabel" />

    <TextView
        android:id="@+id/lightReferenceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:text="@string/LightReferenceLabel"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/lightReferenceValue"
        app:layout_constraintTop_toBottomOf="@id/btnScanDevices" />

    <TextView
        android:id="@+id/lightReferenceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="40%"
        app:layout_constraintLeft_toRightOf="@id/lightReferenceLabel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnScanDevices" />

    <com.google.android.material.slider.Slider
        android:id="@+id/lightReferenceSlider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:stepSize="1"
        android:value="40"
        android:valueFrom="0"
        android:valueTo="80"
        app:labelBehavior="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lightReferenceLabel" />

    <TextView
        android:id="@+id/humidityReferenceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:text="@string/humidityReferenceLabel"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/humidityReferenceValue"
        app:layout_constraintTop_toBottomOf="@id/lightReferenceSlider" />


    <TextView
        android:id="@+id/humidityReferenceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="40%"
        app:layout_constraintLeft_toRightOf="@id/humidityReferenceLabel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lightReferenceSlider" />


    <com.google.android.material.slider.Slider
        android:id="@+id/humidityReferenceSlider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:stepSize="1"
        android:value="40"
        android:valueFrom="0"
        android:valueTo="80"
        app:labelBehavior="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/humidityReferenceLabel" />

    <TextView
        android:id="@+id/temperatureReferenceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:text="@string/temperatureReferenceLabel"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/temperatureReferenceValue"
        app:layout_constraintTop_toBottomOf="@id/humidityReferenceSlider" />

    <TextView
        android:id="@id/temperatureReferenceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="25°C"
        app:layout_constraintLeft_toRightOf="@id/temperatureReferenceLabel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/humidityReferenceSlider" />

    <com.google.android.material.slider.Slider
        android:id="@+id/temperatureReferenceSlider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:stepSize="1"
        android:value="25"
        android:valueFrom="10"
        android:valueTo="40"
        app:labelBehavior="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/temperatureReferenceLabel" />

    <Button
        android:id="@+id/setReferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/sendReferencesValues"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/temperatureReferenceSlider" />


</androidx.constraintlayout.widget.ConstraintLayout>